  have changed (to fix some unfortunate clashes), please check your code to
  ensure that no tests for wxYES or wxNO are broken: for example, the following
  will *NOT* work any longer:

        if ( flags & wxYES_NO )
                ... do something ...
        if ( flags & wxYES )
                ... do something else ...

- wxGLCanvas now derives directly from wxWindow, not wxScrolledWindow

- wxGridCellAttrProvider class API changed, you will need to update your code
  if you derived any classes from it

- wxImage::ComputeHistogram()'s signature changed to 
  unsigned long ComputeHistogram(wxImageHistogram&) const

- wxEvtHandler cannot be copied/assigned any longer - this never worked but
  now it results in compile-time error instead of run-time crashes

- WXK_NUMLOCK and WXK_SCROLL keys no longer result in EVT_CHAR() events,
  they only generate EVT_KEY_DOWN/UP() ones

- the dialogs use wxApp::GetTopWindow() as the parent implicitly if the
  parent specified is NULL, use wxDIALOG_NO_PARENT style to prevent this
  from happening

- several obsolete synonyms are only retained in WXWIN_COMPATIBILITY_2_2 mode:
  for example, use wxScrolledWindow::GetViewStart() now instead of ViewStart()
  and GetCount() instead of Number() in many classes

- wxCmdLineParser does not use wxLog to output messages anymore.
  to obtain the previous behaviour, add
  wxMessageOutput::Set(new wxMessageOutputLog); to your program
  (you will need to #include <wx/msgout.h>)

wxMSW:

! build system changed: setup.h is not a static file in include/wx any more
  but is created as part of the build process under lib/<toolkit>/wx/include
  where <toolkit> is of the form (msw|univ)[dll][u][d]. You'll need to update
  the include path in your make/project files appropriately. Furthermore,
  xpm.lib is no longer used by wxMSW, it was superseded by the wxXPMDecoder
  class. You'll need to remove all references to xpm.lib from your 
  make/project files.
